objects/Centro__Linked_Conversation__c.object
<CustomObject>
    <fields>
        <fullName>Centro__AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Linked Conversations</relationshipLabel>
        <relationshipName>Linked_Conversations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Centro__ChannelId__c</fullName>
        <label>ChannelId</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Centro__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Centro__Message_TS__c</fullName>
        <label>Message TS</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Centro__RecordId__c</fullName>
        <externalId>true</externalId>
        <label>Record</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Centro__Slack_MemberId__c</fullName>
        <label>Slack MemberId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Linked Conversation</label>
    <listViews>
        <fullName>Centro__All</fullName>
        <columns>NAME</columns>
        <columns>Centro__RecordId__c</columns>
        <columns>Centro__AccountId__c</columns>
        <columns>Centro__ChannelId__c</columns>
        <columns>Centro__Message_TS__c</columns>
        <columns>Centro__Slack_MemberId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Conversation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Linked Conversations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>